Organize biome colors

--- a/biomes/colors.yml
+++ b/biomes/colors.yml
@@ -1,49 +1,32 @@
-# end biomes
+# Dragon Island
 MAIN_END: 0x4d004d
+DRAGON_PIT: 0x050505
+MAIN_END_VOID: 0x141414
 
-END_BARRENS: 0xabab98
-END_MIDLANDS: 0xc9c9b1
+# End Biomes
 END_HIGHLANDS: 0xe8e8cf
-END_PLANES: 0x616156
-GLIMMERING_SPIRES: 0xf0f0e4
 
 SHATTERED_END: 0x180b24
 SHATTERED_FOREST: 0x2f1645
-SKEWERED_CLIFFS: 0xfafae3
+
 DARK_END: 0x1f1f14
 AMETHYST_END: 0x9966cc
 TAINTED_END: 0x7d08c8
-CORRUPTED_WASTES: 0x100917
-
 STYGIAN_BARRENS: 0x252130
+
 CRAGGY_END: 0x929c97
 CHORUVE_WOODS: 0x7f549c
 CHORAL_DEADLANDS: 0x808080
-CRYSTAL_OVERHEAD: 0x8b8b82
 IVORY_EMPYREAN: 0xffffff
 
 ROSETTE_POOLS: 0xd3658e
 MAUVE_JUNGLE: 0xa92feb
-WARPED_BARRENS: 0x00d0cb
-WARPED_WOODLANDS: 0x00bdb8
 TWISTED_GROVE: 0x00aba6
 END_WILDS: 0xFFFF00
-
-ARGIL_GROWTH: 0x382923
-
-END_NOODLES: 0xf5f5c1
-END_WEBS: 0xe8e895
-
 CRIM_THICKET: 0x9a596c
 VERMILION_WILDS: 0xb33c35
-CERISE_CORRAL: 0xc059b7
-CERULEAN_EXPANSE: 0x2c2e8e
-APRICHORUS_PLAINS: 0x2c2e8e
-ASHEN_END: 0x262c2b
 
-# void biomes
-DRAGON_PIT: 0x050505
-MAIN_END_VOID: 0x141414
+# Void Biomes
 VOID: 0x171717
 STARFIELD: 0xff33cc
 ASTEROID_FIELD: 0x3c2e40
@@ -87,3 +70,25 @@ AETHER_FOREST: 0x7fa64e
 AETHER_HIGHLANDS: 0x80B497
 AETHER_HIGHLANDS_FOREST: 0x6d9980
 
+# Legacy
+END_BARRENS: 0xabab98
+END_MIDLANDS: 0xc9c9b1
+END_PLANES: 0x616156
+GLIMMERING_SPIRES: 0xf0f0e4
+
+SKEWERED_CLIFFS: 0xfafae3
+CORRUPTED_WASTES: 0x100917
+
+CRYSTAL_OVERHEAD: 0x8b8b82
+WARPED_BARRENS: 0x00d0cb
+WARPED_WOODLANDS: 0x00bdb8
+
+ARGIL_GROWTH: 0x382923
+
+END_NOODLES: 0xf5f5c1
+END_WEBS: 0xe8e895
+
+CERISE_CORRAL: 0xc059b7
+CERULEAN_EXPANSE: 0x2c2e8e
+APRICHORUS_PLAINS: 0x2c2e8e
+ASHEN_END: 0x262c2b
