--- a/meta.yml
+++ b/meta.yml
@@ -104,7 +104,7 @@ terrain-configuration:
   # Max height of default terrain
   # Default: ${meta.yml:top-y} - 20
 
-  island-min-height: ${meta.yml:bottom-y}
+  island-min-height: ${meta.yml:bottom-y} - 20
   # Lowest height of default terrain
   # Default: ${meta.yml:bottom-y} + 20
 
