Mitigate tainted_end powder fall cascades

--- a/biomes/end/tainted_end.yml
+++ b/biomes/end/tainted_end.yml
@@ -15,3 +15,5 @@ features:
     - TAINTED_TENDRILS
   postprocessors:
     - TAINTED_GLOWS
+    - BLACK_CONCRETE_POWDER_BOTTOM
+    - PURPLE_CONCRETE_POWDER_BOTTOM
