Adjust outer end frontier distribution

--- a/biome-distribution/stages/outer_end_distribution.yml
+++ b/biome-distribution/stages/outer_end_distribution.yml
@@ -1,16 +1,4 @@
 stages:
-  - type: REPLACE
-    sampler:
-      type: CELLULAR
-      return: CellValue
-      frequency: 1 / 800 / ${customization.yml:outer-end-biome-scale}
-    from: ring5
-    to:
-      ring1: 1
-      ring2: 1
-      ring3: 1
-      ring4: 1
-
   - type: REPLACE_LIST
     sampler:
       type: CELLULAR
@@ -37,6 +25,32 @@ stages:
         - END_WILDS: 1
         - CHORUVE_WOODS: 1
         - TWISTED_GROVE: 1
+
+  - type: REPLACE
+    sampler:
+      type: CELLULAR
+      return: CellValue
+      frequency: 1 / 400 / ${customization.yml:outer-end-biome-scale}
+    from: ring5
+    to:
+      - END_HIGHLANDS: 1
+      - SHATTERED_END: 1
+      - SHATTERED_FOREST: 1
+
+      - TAINTED_END: 1
+      - DARK_END: 1
+      - AMETHYST_END: 1
+      - CHORAL_DEADLANDS: 1
+
+      - IVORY_EMPYREAN: 1
+      - VERMILION_WILDS: 1
+      - CRIM_THICKET: 1
+      - STYGIAN_BARRENS: 1
+
+      - MAUVE_JUNGLE: 1
+      - END_WILDS: 1
+      - CHORUVE_WOODS: 1
+      - TWISTED_GROVE: 1
 
   - type: REPLACE
     sampler:
