--- a/biomes/abstract/terrain/aether/legacy/eq_aether_driftfalls.yml
+++ b/biomes/abstract/terrain/aether/legacy/eq_aether_driftfalls.yml
@@ -18,12 +18,12 @@ terrain:
         )
       )
     variables:
-      threshold: ${meta.yml:terrain-configuration.aether-island-threshold}
-      max: ${meta.yml:terrain-configuration.aether-island-max-height}
-      min: ${meta.yml:terrain-configuration.aether-island-min-height}
-      taper: ${meta.yml:terrain-configuration.aether-island-taper}
-      flatness: ${meta.yml:terrain-configuration.aether-island-flatness}
-      undercarriageTranslate: ${meta.yml:terrain-configuration.aether-island-undercarriage-translate}
+      threshold: ${customization.yml:aether-island-threshold}
+      max: ${customization.yml:aether-island-max-height}
+      min: ${customization.yml:aether-island-min-height}
+      taper: ${customization.yml:aether-island-taper}
+      flatness: ${customization.yml:aether-island-flatness}
+      undercarriageTranslate: ${customization.yml:aether-island-undercarriage-translate}
     samplers:
       simplex3:
         dimensions: 3
@@ -33,7 +33,7 @@ terrain:
           octaves: 5
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.02 / ${meta.yml:terrain-configuration.island-scale}
+            frequency: 0.02 / ${customization.yml:island-scale}
       undercarriageMask:
         dimensions: 3
         type: PROBABILITY
@@ -43,4 +43,4 @@ terrain:
           gain: 1
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.00005 / ${meta.yml:terrain-configuration.island-scale}
+            frequency: 0.00005 / ${customization.yml:island-scale}
