--- a/biomes/abstract/terrain/end/eq_default_template.yml
+++ b/biomes/abstract/terrain/end/eq_default_template.yml
@@ -3,12 +3,12 @@ type: BIOME
 abstract: true
 
 variables: &variables
-  threshold: ${meta.yml:terrain-configuration.island-threshold}
-  max: ${meta.yml:terrain-configuration.island-max-height}
-  min: ${meta.yml:terrain-configuration.island-min-height}
-  taper: ${meta.yml:terrain-configuration.island-taper}
-  flatness: ${meta.yml:terrain-configuration.island-flatness}
-  undercarriageTranslate: ${meta.yml:terrain-configuration.island-undercarriage-translate}
+  threshold: ${customization.yml:island-threshold}
+  max: ${customization.yml:island-max-height}
+  min: ${customization.yml:island-min-height}
+  taper: ${customization.yml:island-taper}
+  flatness: ${customization.yml:island-flatness}
+  undercarriageTranslate: ${customization.yml:island-undercarriage-translate}
 
 terrain:
   sampler:
@@ -35,7 +35,7 @@ terrain:
           octaves: 5
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.002 / ${meta.yml:terrain-configuration.island-scale}
+            frequency: 0.002 / ${customization.yml:island-scale}
       undercarriageMask:
         dimensions: 3
         type: PROBABILITY
@@ -45,4 +45,4 @@ terrain:
           gain: 1
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.005 / ${meta.yml:terrain-configuration.island-scale}
+            frequency: 0.005 / ${customization.yml:island-scale}
