--- a/biomes/abstract/terrain/end/eq_shattered.yml
+++ b/biomes/abstract/terrain/end/eq_shattered.yml
@@ -18,12 +18,12 @@ terrain:
         )  
       )
     variables:
-      threshold: ${meta.yml:terrain-configuration.island-threshold}
-      max: ${meta.yml:terrain-configuration.island-max-height}
-      min: ${meta.yml:terrain-configuration.island-min-height}
-      taper: ${meta.yml:terrain-configuration.island-taper}
-      flatness: ${meta.yml:terrain-configuration.island-flatness}
-      undercarriageTranslate: ${meta.yml:terrain-configuration.island-undercarriage-translate}
+      threshold: ${customization.yml:island-threshold}
+      max: ${customization.yml:island-max-height}
+      min: ${customization.yml:island-min-height}
+      taper: ${customization.yml:island-taper}
+      flatness: ${customization.yml:island-flatness}
+      undercarriageTranslate: ${customization.yml:island-undercarriage-translate}
     samplers:
       simplex3:
         dimensions: 3
@@ -33,7 +33,7 @@ terrain:
           octaves: 5
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.006 / ${meta.yml:terrain-configuration.island-scale}
+            frequency: 0.006 / ${customization.yml:island-scale}
       undercarriageMask:
         dimensions: 3
         type: PROBABILITY
@@ -43,4 +43,4 @@ terrain:
           gain: 1
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.008 / ${meta.yml:terrain-configuration.island-scale}
+            frequency: 0.008 / ${customization.yml:island-scale}
