--- a/biomes/abstract/terrain/end/legacy/eq_bumpy.yml
+++ b/biomes/abstract/terrain/end/legacy/eq_bumpy.yml
@@ -18,12 +18,12 @@ terrain:
         )
       )
     variables:
-      threshold: ${meta.yml:terrain-configuration.island-threshold}-0.1
-      max: ${meta.yml:terrain-configuration.island-max-height}
-      min: ${meta.yml:terrain-configuration.island-min-height}
-      taper: ${meta.yml:terrain-configuration.island-taper}
-      flatness: ${meta.yml:terrain-configuration.island-flatness}*1.5
-      undercarriageTranslate: ${meta.yml:terrain-configuration.island-undercarriage-translate}
+      threshold: ${customization.yml:island-threshold}-0.1
+      max: ${customization.yml:island-max-height}
+      min: ${customization.yml:island-min-height}
+      taper: ${customization.yml:island-taper}
+      flatness: ${customization.yml:island-flatness}*1.5
+      undercarriageTranslate: ${customization.yml:island-undercarriage-translate}
     samplers:
       simplex3:
         dimensions: 3
@@ -33,7 +33,7 @@ terrain:
           octaves: 5
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.002 / ${meta.yml:terrain-configuration.island-scale}
+            frequency: 0.002 / ${customization.yml:island-scale}
       undercarriageMask:
         dimensions: 3
         type: PROBABILITY
@@ -43,8 +43,8 @@ terrain:
           gain: 1
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.005 / ${meta.yml:terrain-configuration.island-scale}
+            frequency: 0.005 / ${customization.yml:island-scale}
       simplex:
         dimensions: 2
         type: OPEN_SIMPLEX_2
-        frequency: 0.2 / ${meta.yml:terrain-configuration.island-scale}
+        frequency: 0.2 / ${customization.yml:island-scale}
