--- a/biomes/abstract/terrain/end/legacy/eq_default_noodles.yml
+++ b/biomes/abstract/terrain/end/legacy/eq_default_noodles.yml
@@ -30,11 +30,11 @@ terrain:
       )
     variables:
       threshold: 0.6
-      max: ${meta.yml:terrain-configuration.island-max-height}
-      min: ${meta.yml:terrain-configuration.island-min-height}
-      taper: ${meta.yml:terrain-configuration.island-taper}
-      flatness: ${meta.yml:terrain-configuration.island-flatness}
-      undercarriageTranslate: ${meta.yml:terrain-configuration.island-undercarriage-translate}
+      max: ${customization.yml:island-max-height}
+      min: ${customization.yml:island-min-height}
+      taper: ${customization.yml:island-taper}
+      flatness: ${customization.yml:island-flatness}
+      undercarriageTranslate: ${customization.yml:island-undercarriage-translate}
     samplers:
       simplex3:
         dimensions: 3
@@ -44,7 +44,7 @@ terrain:
           octaves: 5
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.002 / ${meta.yml:terrain-configuration.island-scale}
+            frequency: 0.002 / ${customization.yml:island-scale}
       undercarriageMask:
         dimensions: 3
         type: PROBABILITY
@@ -54,8 +54,8 @@ terrain:
           gain: 1
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.005 / ${meta.yml:terrain-configuration.island-scale}
+            frequency: 0.005 / ${customization.yml:island-scale}
       test:
         dimensions: 3
         type: OPEN_SIMPLEX_2
-        frequency: 0.02 / ${meta.yml:terrain-configuration.island-scale}
+        frequency: 0.02 / ${customization.yml:island-scale}
