--- a/biomes/abstract/terrain/end/legacy/eq_spikes.yml
+++ b/biomes/abstract/terrain/end/legacy/eq_spikes.yml
@@ -32,11 +32,11 @@ vars: &variables
   platformMaskFull: 0.1
   
   threshold: 0.4
-  max: ${meta.yml:terrain-configuration.island-max-height}
-  min: ${meta.yml:terrain-configuration.island-min-height}
-  taper: ${meta.yml:terrain-configuration.island-taper}
-  flatness: ${meta.yml:terrain-configuration.island-flatness}
-  undercarriageTranslate: ${meta.yml:terrain-configuration.island-undercarriage-translate}
+  max: ${customization.yml:island-max-height}
+  min: ${customization.yml:island-min-height}
+  taper: ${customization.yml:island-taper}
+  flatness: ${customization.yml:island-flatness}
+  undercarriageTranslate: ${customization.yml:island-undercarriage-translate}
 
 terrain:
   sampler:
@@ -66,7 +66,7 @@ terrain:
           octaves: 5
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.002 / ${meta.yml:terrain-configuration.island-scale}
+            frequency: 0.002 / ${customization.yml:island-scale}
       undercarriageMask:
         dimensions: 3
         type: PROBABILITY
@@ -76,7 +76,7 @@ terrain:
           gain: 1
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.005 / ${meta.yml:terrain-configuration.island-scale}
+            frequency: 0.005 / ${customization.yml:island-scale}
       ground: # Basic ground height map
         dimensions: 2
         type: FBM
