--- a/biomes/abstract/terrain/void/eq_debri.yml
+++ b/biomes/abstract/terrain/void/eq_debri.yml
@@ -21,8 +21,8 @@ terrain:
       )
     variables:
       threshold: 0.4
-      max: $meta.yml:terrain-configuration.island-max-height
-      min: $meta.yml:terrain-configuration.island-min-height
+      max: ${customization.yml:island-max-height}
+      min: ${customization.yml:island-min-height}
       taper: 5
       flatness: 0
       undercarriageTranslate: -10
@@ -35,7 +35,7 @@ terrain:
           octaves: 5
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.5 / ${meta.yml:terrain-configuration.island-scale}
+            frequency: 0.5 / ${customization.yml:island-scale}
       undercarriageMask:
         dimensions: 3
         type: PROBABILITY
@@ -45,4 +45,4 @@ terrain:
           gain: 1
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.1 / ${meta.yml:terrain-configuration.island-scale}
+            frequency: 0.1 / ${customization.yml:island-scale}
