--- a/customization.yml
+++ b/customization.yml
@@ -1,16 +1,35 @@
+# ---
+# Dragon Island
+# ---
+
 dragon-island-radius: 150
+# Controls the size of the dragon island
 
 dragon-pit-radius: 80
+# Controls the size of the dragon island pit
 
 void-buffer-width: 1000
+# Controls the width of the void buffer between
+# the dragon island and outer end
+
+# ---
+# Biome Distribution
+# ---
 
 outer-end-start: ${customization.yml:dragon-island-radius} + ${customization.yml:void-buffer-width}
+# Determines the start of the outer end
 
 outer-end-rings-scale: 1
+# Modifies the scale of the Rings of Life preset rings sizes
 
 outer-end-biome-scale: 1
+# Modifies the scale of the outer end biomes
 
 aether-biome-scale: 1
+# Modifies the scale of the aether biomes
+
+global-scale: 1
+# Modifies the scale of all biome distribution
 
 # ---
 # Spot Biomes
@@ -40,6 +59,69 @@ spot-radius-min: 200
 spot-radius-max: 250
 # Default: 250
 
+# ---
+# End Terrain
+# ---
+
+island-scale: 1
+# Scale of default terrain
+# Default: 1
+
+island-threshold: 0.3
+# Threshold or density of default island
+# Default: 0.3
+
+island-max-height: ${meta.yml:top-y}
+# Max height of default terrain
+# Default: ${meta.yml:top-y} - 20
+
+island-min-height: ${meta.yml:bottom-y} - 20
+# Lowest height of default terrain
+# Default: ${meta.yml:bottom-y} + 20
+
+island-taper: 100
+# Range for narrowing default terrain
+# Default: 100
+
+island-flatness: 5
+# Flatness of default terrain
+# Default: 5
+
+island-undercarriage-translate: -10
+# Translate placement of default terrain undercarriage
+# Default: -10
+
+# ---
+# Aether Terrain
+# ---
+
+aether-island-scale: 1
+# Scale of default terrain
+# Default: 1
+
+aether-island-threshold: 0.4
+# Threshold or density of default island
+# Default: 0.4
+
+aether-island-max-height: ${meta.yml:top-y}
+# Max height of default terrain
+# Default: ${meta.yml:top-y} - 20
+
+aether-island-min-height: ${meta.yml:bottom-y}
+# Lowest height of default terrain
+# Default: ${meta.yml:bottom-y} + 20
+
+aether-island-taper: 100
+# Range for narrowing default terrain
+# Default: 100
+
+aether-island-flatness: 5
+# Flatness of default terrain
+# Default: 5
+
+aether-island-undercarriage-translate: -10
+# Translate placement of default terrain undercarriage
+# Default: -10
 
 # Everything below here is currently being redone and may not do anything
 
