--- a/biomes/end/legacy/glimmering_spires.yml
+++ b/biomes/end/legacy/glimmering_spires.yml
@@ -1,6 +1,6 @@
 id: GLIMMERING_SPIRES
 type: BIOME
-extends: [ BASE_END, EQ_SPIRES, CARVING_LAND ]
+extends: [ BASE_END, EQ_SPIRES, CARVING_AETHER ]
 vanilla: minecraft:end_barrens
 color: $biomes/colors.yml:GLIMMERING_SPIRES
 
