--- a/customization.yml
+++ b/customization.yml
@@ -49,15 +49,15 @@ spot-spread: 4050
 # Roughly how many blocks apart each spot biome will be
 # Default: 4050
 
-spot-border: 200
+spot-border: 300
 # Roughly the biome border that generates around the inner spot biome
-# Default: 2050
+# Default: 300
 
-spot-radius-min: 200
-# Default: 200
+spot-radius-min: 600
+# Default: 600
 
-spot-radius-max: 250
-# Default: 250
+spot-radius-max: 650
+# Default: 650
 
 # ---
 # End Terrain
@@ -103,11 +103,11 @@ aether-island-threshold: 0.4
 # Threshold or density of default island
 # Default: 0.4
 
-aether-island-max-height: ${meta.yml:top-y}
+aether-island-max-height: ${meta.yml:top-y} - 20
 # Max height of default terrain
 # Default: ${meta.yml:top-y} - 20
 
-aether-island-min-height: ${meta.yml:bottom-y}
+aether-island-min-height: ${meta.yml:bottom-y} - 20
 # Lowest height of default terrain
 # Default: ${meta.yml:bottom-y} + 20
 
@@ -115,9 +115,9 @@ aether-island-taper: 100
 # Range for narrowing default terrain
 # Default: 100
 
-aether-island-flatness: 5
+aether-island-flatness: 1
 # Flatness of default terrain
-# Default: 5
+# Default: 1
 
 aether-island-undercarriage-translate: -10
 # Translate placement of default terrain undercarriage
