--- a/biomes/end/amethyst_end.yml
+++ b/biomes/end/amethyst_end.yml
@@ -4,7 +4,10 @@ extends:
   - BASE_END
   - EQ_DEFAULT
 vanilla: minecraft:end_highlands
-color: $biomes/colors.yml:AMETHYST_END  
+color: $biomes/colors.yml:AMETHYST_END
+
+tags:
+  - ADD_VOID_BIOMES
   
 palette:
   - AMETHYST_END: $meta.yml:top-y
