--- a/biomes/end/choruve_woods.yml
+++ b/biomes/end/choruve_woods.yml
@@ -6,6 +6,9 @@ extends:
 vanilla: minecraft:end_highlands
 color: $biomes/colors.yml:CHORUVE_WOODS
 
+tags:
+  - ADD_VOID_BIOMES
+
 colors:
   grass: 0x584a6c
   foliage: 0x584a6c
