--- a/biomes/void/void.yml
+++ b/biomes/void/void.yml
@@ -1,6 +1,8 @@
 id: VOID
 type: BIOME
-extends: [ BASE_VOID, EQ_VOID ]
+extends:
+  - BASE_VOID
+  - EQ_VOID
 vanilla: minecraft:the_void
 color: $biomes/colors.yml:VOID
 
