--- a/biomes/colors.yml
+++ b/biomes/colors.yml
@@ -1,7 +1,8 @@
 # Dragon Island
-MAIN_END: 0x4d004d
 DRAGON_PIT: 0x050505
-MAIN_END_VOID: 0x141414
+DRAGON_ISLAND: 0x4d004d
+DRAGON_ISLAND_EDGE: 0x2b022b
+DRAGON_ISLAND_VOID: 0x141414
 
 # End Biomes
 END_HIGHLANDS: 0xe8e8cf
