--- a/biome-distribution/presets/alternative/vanilla-ish.yml
+++ b/biome-distribution/presets/alternative/vanilla-ish.yml
@@ -29,8 +29,8 @@ biomes:
       sampler: *sampler
       biomes:
         - outer-end: 1
-        - MAIN_END_VOID: 2
-        - MAIN_END: 1
+        - DRAGON_ISLAND_VOID: 2
+        - DRAGON_ISLAND: 1
     stages:
       - << biome-distribution/stages/alternative/vanilla_distribution.yml:stages
 
