--- a/biomes/abstract/terrain/void/eq_debri.yml
+++ b/biomes/abstract/terrain/void/eq_debri.yml
@@ -6,24 +6,26 @@ terrain:
   sampler:
     type: EXPRESSION
     expression: |
-      -1+threshold-
+      -1+threshold+
       lerp(y, max, 0, max-taper,
         max(
           lerp(y, min-undercarriageTranslate, 0, min-undercarriageTranslate+taper,
-            simplex3(x, y*flatness, z)
+              lerp(y, min-undercarriageTranslate, 0, min+10,
+                max((simplex(x,z)+1)/2,simplex3(x, y*flatness, z))
+              )
           ),
           lerp(y, min, 0, min+taper,
-            simplex3(x, (y-undercarriageTranslate)*flatness, z) * undercarriageMask(x, y/2, z) * 1.3
+            simplex3(x, (y-undercarriageTranslate), z) * undercarriageMask(x, y, z)
           )
         )
       )
     variables:
-      threshold: 1
+      threshold: 0.3
       max: ${customization.yml:island-max-height}
       min: ${customization.yml:island-min-height}
-      taper: ${customization.yml:island-taper}
-      flatness: ${customization.yml:island-flatness}
-      undercarriageTranslate: ${customization.yml:island-undercarriage-translate}
+      taper: 5
+      flatness: 0
+      undercarriageTranslate: -10
     samplers:
       simplex3:
         dimensions: 3
@@ -33,7 +35,7 @@ terrain:
           octaves: 5
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.02 / ${customization.yml:island-scale}
+            frequency: 0.5 / ${customization.yml:island-scale}
       undercarriageMask:
         dimensions: 3
         type: PROBABILITY
@@ -43,4 +45,4 @@ terrain:
           gain: 1
           sampler:
             type: OPEN_SIMPLEX_2
-            frequency: 0.07 / ${customization.yml:island-scale}
+            frequency: 0.1 / ${customization.yml:island-scale}
