--- a/biomes/colors.yml
+++ b/biomes/colors.yml
@@ -31,7 +31,7 @@ VERMILION_WILDS: 0xb33c35
 VOID: 0x171717
 STARFIELD: 0xff33cc
 ASTEROID_FIELD: 0x3c2e40
-GALAXY_FIELD: 0x855980
+NEBULA: 0x855980
 VOID_SEA: 0x000000
 VOID_SEA_BORDER: 0x111414
 AURORA_FIELD: 0xff78c4
