--- a/biomes/colors.yml
+++ b/biomes/colors.yml
@@ -34,7 +34,7 @@ ASTEROID_FIELD: 0x3c2e40
 NEBULA: 0x855980
 VOID_SEA: 0x000000
 VOID_SEA_BORDER: 0x111414
-AURORA_FIELD: 0xff78c4
+AURORA: 0xff78c4
 WEBBED_VOID: 0x3b3535
 
 # aether coasts
