--- a/biomes/void/aurora.yml
+++ b/biomes/void/aurora.yml
@@ -1,9 +1,9 @@
-id: AURORA_FIELD
+id: AURORA
 type: BIOME
 extends:
   - VOID
 vanilla: minecraft:the_void
-color: $biomes/colors.yml:AURORA_FIELD
+color: $biomes/colors.yml:AURORA
 
 features:
   preprocessors:
