--- a/features/aether/sky/cloud_layer.yml
+++ b/features/aether/sky/cloud_layer.yml
@@ -39,7 +39,7 @@ locator:
         expression: |
           if( height != 0, if( y = round(height+noise(x,z)), 1, -1), -1)
         variables:
-          height: ${customization.yml:aether.aether-sky-height}-2
+          height: ${customization.yml:aether-sky-height}-2
         functions:
         samplers:
           noise:
